stop chat lib from causing alignment difference between main/chat

--- a/src/chat/chat-override.css
+++ b/src/chat/chat-override.css
@@ -28,6 +28,7 @@
   flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden;
+  width: 0; /* black magic fuckery. prevents element from over-expanding */
 }
 
 .rce-container-mbox {
